# solitary

./: .gitignore  .tmuxp.yaml  LICENSE  README.md  pyproject.toml
config/: docker-compose.yml  dockerfile
config/scripts/: entrypoint.sh  grab_repos.py
src/solitary/: __init__.py  config.py  example.py  example2.py  exceptions.py  models.py  sandbox.py
